--- a/Data2Serial2/Window1.xaml
+++ b/Data2Serial2/Window1.xaml
@@ -1,8 +1,8 @@
 ﻿<Window x:Class="Data2Serial2.Window1"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    Title="Data2Serial2" Height="300" Width="300">
+    Title="Data2Serial2" Height="300" Width="300" WindowStyle="None" BorderBrush="Black" BorderThickness="1,1,1,1" ShowInTaskbar="True" ResizeMode="NoResize">
     <Grid>
-        
+        <Label Height="28" Name="label1" VerticalAlignment="Top" HorizontalAlignment="Left" Width="120">Data2Serial2</Label>
     </Grid>
 </Window>
